feat: adicionada autenticacao e configuracoes iniciais

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL=postgres://<user>:<password>@<host>:<port>/<dbname>
+MAILER_CONFIG_URL=smtps://<user@example.com>:<password>@<smtp.example.com>
+JWT_SECRET=
+MAGIC_LINK_SECRET=
+APPLICATION_URL=
