--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "nodemailer": "^6.9.10",
@@ -81,6 +83,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "setupFiles": ["<rootDir>/setEnv.ts"]
+    "setupFiles": [
+      "<rootDir>/setEnv.ts"
+    ]
   }
 }
